Cycles Optix tasks for 2.81 #69801

Closed
opened 2019-09-12 14:39:54 +02:00 by Brecht Van Lommel · 7 comments

Before the 2.81 release, we should fix a few things in the Optix backend:

    • Animation denoising does not work
    • Reported memory leak when quiting Blender after using Optix
    • Crashes in motion blur tests in the regression suites
Before the 2.81 release, we should fix a few things in the Optix backend: * - [x] Animation denoising does not work * - [x] Reported memory leak when quiting Blender after using Optix * - [x] Crashes in motion blur tests in the regression suites
Author
Owner

Added subscriber: @brecht

Added subscriber: @brecht

Added subscriber: @juang3d

Added subscriber: @juang3d

Is Optix for GTX cards planned for 2.81?

Is Optix for GTX cards planned for 2.81?

Added subscriber: @lemenicier_julien

Added subscriber: @lemenicier_julien
Member

Added subscriber: @pmoursnv

Added subscriber: @pmoursnv
Patrick Mours was assigned by Brecht Van Lommel 2019-09-29 14:11:37 +02:00
Author
Owner

The baking "crash" is really just the regression tests misreporting what happened, not critical for 2.81 then.

The baking "crash" is really just the regression tests misreporting what happened, not critical for 2.81 then.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Thomas Dinges added this to the 2.81 milestone 2023-02-08 16:46:57 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69801
No description provided.