intern/cycles/device/device.cpp
@@ -643,6 +643,7 @@ void Device::free_memory()
 {
   devices_initialized_mask = 0;
   cuda_devices.free_memory();
+  optix_devices.free_memory();
   opencl_devices.free_memory();
   cpu_devices.free_memory();
   network_devices.free_memory();
